<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="170dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/recommond_courses"
                android:textColor="@color/gray_8"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/courses_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/more"
                android:textColor="@color/app_main_color"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/gray_b" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recommend_courses_Rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false" />

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="8dp"-->
            <!--android:background="@color/gray_press" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:text="@string/audition_lesson"
                android:textColor="@color/gray_8"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/lesson_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/more"
                android:textColor="@color/app_main_color"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/gray_b" />
    </LinearLayout>
</layout>
